Revert "Issue #1077300 by fxarte, joachim: Views blocks list shows two scrollbars."
This reverts commit d19a29a661f65fd125458809da6796364a3b4833.
Forgot to add attribution.

--- a/plugins/context_reaction_block.css
+++ b/plugins/context_reaction_block.css
@@ -168,6 +168,7 @@ body.context-editing  .draggable:hover a.context-block-remove {
  * Block visibility ===================================================
  */
 #context-blockform  .context-blockform-selector {
+  height:20em;
   overflow:auto;
   }
 
@@ -178,7 +179,6 @@ body.context-editing  .draggable:hover a.context-block-remove {
   border:1px solid #ddd;
   padding:10px;
   width:50%;
-  vertical-align: top;
   }
 
 #context-blockform td.blocks  .label,
